--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <div class="pageContainer">
+      <button id="reconfigureButton">RECONFIGURE</button>
       <div class="artContainer">
         <div id="gridContainer"></div>
       </div>
